cmake_minimum_required(VERSION 3.12)
project(Struct)

set(CMAKE_CXX_STANDARD 98)

#add_executable(Struct main.cpp)

#add_executable(Struct LinkList/linklist.cpp )
#add_executable(Struct LinkList/Link.cpp)

#add_executable(Struct stack/seqStack.cpp)
#add_executable(Struct stack/LinkStack.cpp)

#add_executable(Struct queue/SeQueue.cpp)

#add_executable(Struct tree/LinkTree.cpp)

#add_executable(Struct graph/ArrayGraph.cpp)
#add_executable(Struct graph/LinkGraph.cpp)


#add_executable(Struct enum/multiplication.cpp)

add_executable(Struct search/binarySearch.cpp)

