cmake_minimum_required(VERSION 3.12)
project(Struct)

set(CMAKE_CXX_STANDARD 98)

#add_executable(Struct main.cpp)
#add_executable(Struct LinkList/linklist.cpp )
#add_executable(Struct LinkList/Link.cpp)

#add_executable(Struct stack/seqStack.cpp)
#add_executable(Struct stack/LinkStack.cpp)

#add_executable(Struct queue/SeQueue.cpp)

#add_executable(Struct tree/LinkTree.cpp)

#add_executable(Struct graph/ArrayGraph.cpp)
#add_executable(Struct graph/LinkGraph.cpp)

#add_executable(Struct string/huiwen.cpp)
#add_executable(Struct string/subString.cpp)


#add_executable(Struct enum/multiplication.cpp)
#add_executable(Struct enum/quanpailie.cpp)

#add_executable(Struct search/binarySearch.cpp)

#add_executable(Struct dynamicplan/sellStock.cpp)
#add_executable(Struct dynamicPlan/stockQuestion.cpp)
#add_executable(Struct dynamicPlan/zeroPackage.cpp)
#add_executable(Struct dynamicPlan/makeSmallChange.cpp)
#add_executable(Struct dynamicPlan/targetSum.cpp)
#add_executable(Struct dynamicPlan/LongerCommonSubSequence.cpp)
#add_executable(Struct dynamicPlan/editDistance.cpp)
add_executable(Struct dynamicPlan/LongerIncrSubSequence.cpp)


#add_executable(Struct interval/interval.cpp)

#add_executable(Struct twoSum/twoSum.cpp)

#add_executable(Struct beibao/beibao.cpp)

#add_executable(Struct huisu/targetSum.cpp)


